Finished with edits for chapter 1 and its answer book

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 .DS_Store
 .ipynb_checkpoints/Chapter 2 - First steps-checkpoint.ipynb
 .ipynb_checkpoints/Chapter 5 - Building NLP Applications-checkpoint.ipynb
+.ipynb_checkpoints/
+*-checkpoint.ipynb
 .pyc
