--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+Jinja2==2.7.3
+MarkupSafe==0.23
 certifi==14.05.14
 ipython==2.3.0
 matplotlib==1.4.0
@@ -5,6 +7,7 @@ nose==1.3.4
 numpy==1.9.0
 pyparsing==2.0.2
 python-dateutil==2.2
+pyzmq==14.3.1
 scipy==0.14.0
 six==1.7.3
 tornado==4.0.2
